syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "TenantModel";

import "sitewhere-common.proto";

// ###############
// ### TENANTS ###
// ###############

// Information for creating a tenant.
message GTenantCreateRequest {
	GOptionalString token = 1;
	GOptionalString name = 2;
	GOptionalString authenticationToken = 3;
	GOptionalString tenantTemplateId = 4;
	GOptionalString datasetTemplateId = 5;
	repeated string authorizedUserIds = 6;
	map<string, string> metadata = 7;
	GBrandingInformation branding = 8;
}

// Criteria for tenant search.
message GTenantSearchCriteria {
	GSearchText searchText = 1;
	GUserReference authorizedUser = 2;
	GPaging paging = 3;
}

// Results for tenant search.
message GTenantSearchResults {
	int64 count = 1;
	repeated GTenant tenants = 2;
}

// Information for a tenant.
message GTenant {
	string name = 1;
	string authenticationToken = 2;
	string tenantTemplateId = 3;
	string datasetTemplateId = 4;
	repeated string authorizedUserIds = 5;
	GEntityInformation entityInformation = 6;
	GBrandingInformation branding = 7;
}

// ########################
// ### TENANT TEMPLATES ###
// ########################

message GTenantTemplate {
	string id = 1;
	string name = 2;
}

message GDatasetTemplate {
	string id = 1;
	string name = 2;
}

// #####################
// ### KAFKA UPDATES ###
// #####################

// Tenant model update type.
enum GTenantModelUpdateType {
	TENANTMODEL_TENANT_ADDED = 0;
	TENANTMODEL_TENANT_UPDATED = 1;
	TENANTMODEL_TENANT_DELETED = 2;
}

// Tenant model update message.
message GTenantModelUpdate {
	GTenantModelUpdateType type = 1;
	com.sitewhere.grpc.model.GTenant tenant = 2;
}
